--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -28,7 +28,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url("img/banner_bg.jpg") ;
+    background: url("/img/background.jpg") ;
 }
 
 .intro-message {
